# NuitkaStudio

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  build.py  config.toml  logo.rc  resource.qrc  translations.qrc  vcpkg.json
assets/: qt.conf  style.qss
forms/: about_window.ui  export_datalist_window.ui  mainwindow.ui  new_project_window.ui  pack_log_window.ui
lang/: en_US.qm  en_US.ts  zh_CN.qm  zh_CN.ts
licenses/: ElaWidgetTools  QDarkStyleSheet  Qt-Material-Widgets  Quazip
src/: about_window.cpp  about_window.h  app_config.h.in  config.cpp  config.h  export_datalist_window.cpp  export_datalist_window.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h
src/types/: color.h  constants.h  data_structs.h  global_data.cpp  global_data.h  pcm.h  project_config_manager.cpp  project_config_manager.h  project_config_type.h  simname.h
src/ui/: about_window.cpp  about_window.h  export_datalist_window.cpp  export_datalist_window.h  float_button.cpp  float_button.h  mainwindow.cpp  mainwindow.h  new_project_window.cpp  new_project_window.h  pack_log_window.cpp  pack_log_window.h
src/utils/: compress.cpp  compress.h  config.cpp  config.h  data_structs.h  event_bus.cpp  event_bus.h  logger.cpp  logger.h  project_config.cpp  project_config.h  utils.cpp  utils.h
